--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AutovipV.2</title>
+  <title>wowgame99</title>
   <meta property="og:locale" content="th_TH">
   <meta property="og:type" content="game mobile">
 
@@ -15,11 +15,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400&amp;display=swap" rel="stylesheet">
 </head>
 
-
-
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/1e51a6d429910386ec23f485ef21c334.jpg');
-        /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
+        background-image: linear-gradient(0deg,#cf0606, #860202);
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -27,15 +24,46 @@
         color: #fff;">
   <div class="container d-flex mx-auto align-items-center justify-content-center">
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
-      <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
+      <div class="card" style="background-image: linear-gradient(180deg,#eaeaea, #cfcecd); margin-top: 0px;border:0px;border-radius: 15px; box-shadow: 0 0 20px rgba(0, 0, 0, 0.838);">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.img.in.th/images/abfd582c9b0d5900273963ff14b1a530.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://www.img.in.th/images/d8c69d235e460b7e7f010409ce5b357f.png" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/abfd582c9b0d5900273963ff14b1a530.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://www.img.in.th/images/d8c69d235e460b7e7f010409ce5b357f.png" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">แจกเครดิตฟรี 50.- </p>
+          <p class="lead mb-4 mt-3" style="font-family:'Kanit', 
+          sans-serif;font-size: 20px;font-weight: 500; 
+          color: #3c3b3b;
+          ">
+          🌟 กิจกรรมแจกเครดิตฟรี 🌟 <br>
+          รับไปเลย 50 เครดิต <br>
+        </p>
+          <p style="font-family: 'Kanit', 
+          sans-serif; color: #3c3b3b;"> 
+         🔸เพียงแชร์ส่งต่อไปยังเพื่อน 5 คน🔸 <br>
+         🌟หรือกลุ่มไลน์ จำนวน 5 กลุ่ม🌟 <br>
+
+
+        </p>
+<marquee>
+    <p style="font-family: 'Kanit', 
+    sans-serif;
+    color: #3c3b3b;"> 
+    ยินดีต้อนรับเข้าสู่เว็บไซต์ สล็อต คาสิโนออนไลน์ autovip99.com 
+    พร้อมระบบฝาก-ถอนออโต้ 10 วินาที 
+    พนันออนไลน์ อันดับหนึ่ง ให้บริการ สล็อต คาสิโนออนไลน์ 
+    เราให้บริการด้านการเดิมพันคาสิโนบนเว็บแบบครบวงจรตลอด 24ชม.
+    </p>
+</marquee>
+        
           <div class="d-grid gap-2 col-10 mx-auto">
-            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">แชร์เลย</button>
+            <button class="btn btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" 
+            style="font-family:'Kanit',sans-serif;
+            color: #f6f6f6;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.645);
+            background-image: linear-gradient(120deg, #cf0606, #860202);
+            ">
+            แชร์เพื่อปลดล็อค
+          </button>
           </div>
         </div>
       </div>
