--- a/index.html
+++ b/index.html
@@ -24,45 +24,39 @@
         color: #fff;">
   <div class="container d-flex mx-auto align-items-center justify-content-center">
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
-      <div class="card" style="background-image: linear-gradient(180deg,#eaeaea, #cfcecd); margin-top: 0px;border:0px;border-radius: 15px; box-shadow: 0 0 20px rgba(0, 0, 0, 0.838);">
+      <div class="card" style="
+        background-image: linear-gradient(180deg,#eaeaea, #cfcecd); 
+        margin-top: 0px;border:0px;border-radius: 15px; 
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.838);">
+
         <div class="card-body p-3 p-sm-4">
           <!--img src="https://www.img.in.th/images/d8c69d235e460b7e7f010409ce5b357f.png" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
           <img src="https://www.img.in.th/images/d8c69d235e460b7e7f010409ce5b357f.png" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family:'Kanit', 
-          sans-serif;font-size: 20px;font-weight: 500; 
+          <p class="lead mb-4 mt-3" 
+          style="font-family: 'Kanit', 
+          sans-serif;font-size: 28px;font-weight: 500; 
           color: #3c3b3b;
           ">
-          🌟 กิจกรรมแจกเครดิตฟรี 🌟 <br>
-          รับไปเลย 50 เครดิต <br>
+          กิจกรรมแจกเครดิตฟรี
         </p>
           <p style="font-family: 'Kanit', 
           sans-serif; color: #3c3b3b;"> 
-         🔸เพียงแชร์ส่งต่อไปยังเพื่อน 5 คน🔸 <br>
-         🌟หรือกลุ่มไลน์ จำนวน 5 กลุ่ม🌟 <br>
-
-
+          ✅ ไม่ต้องรอ ✅ ไม่ต้องฝากก่อน ✅ ไม่ต้องรอ 
         </p>
-<marquee>
-    <p style="font-family: 'Kanit', 
-    sans-serif;
-    color: #3c3b3b;"> 
-    ยินดีต้อนรับเข้าสู่เว็บไซต์ สล็อต คาสิโนออนไลน์ autovip99.com 
-    พร้อมระบบฝาก-ถอนออโต้ 10 วินาที 
-    พนันออนไลน์ อันดับหนึ่ง ให้บริการ สล็อต คาสิโนออนไลน์ 
-    เราให้บริการด้านการเดิมพันคาสิโนบนเว็บแบบครบวงจรตลอด 24ชม.
-    </p>
-</marquee>
+          <p style="font-family: 'Kanit',
+          sans-serif; color: #3c3b3b;">
+            เพียงร่วมกิจกรรมกับทางเรา
+          </p>
         
           <div class="d-grid gap-2 col-10 mx-auto">
-            <button class="btn btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" 
-            style="font-family:'Kanit',sans-serif;
-            color: #f6f6f6;
+            <button class="btn btn-Warning btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" 
+            style="font-family: 'Kanit', sans-serif; 
+            color: #ffffff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.645);
-            background-image: linear-gradient(120deg, #cf0606, #860202);
-            ">
-            แชร์เพื่อปลดล็อค
+            background:#ff0000;">
+            แชร์กิจกรรมไปยังเพื่อน
           </button>
           </div>
         </div>
@@ -71,141 +65,5 @@
   </div>
 
 
-
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js?s=224243"></script>
-
-  <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js?s=224323"></script>
-  <script>
-    async function sendShare() {
-      const result = await liff.shareTargetPicker([{
-        "type": "flex",
-        "altText": "คุณได้รับเครดิตฟรี รีบเลยก่อนหมดเขต",
-    "type": "flex",
-    "contents": {
-      "type": "bubble",
-  "size": "giga",
-  "direction": "ltr",
-  "hero": {
-    "type": "image",
-    "url": "https://www.img.in.th/images/abfd582c9b0d5900273963ff14b1a530.jpg",
-    "size": "full",
-    "aspectRatio": "1:1",
-    "aspectMode": "cover"
-  },
-  "body": {
-    "type": "box",
-    "layout": "vertical",
-    "contents": [
-      {
-        "type": "text",
-        "text": "แจกเครดิตฟรี 50.- ไม่ต้องฝากก่อน...ถอนได้จริง",
-        "size": "lg",
-        "align": "center",
-        "contents": []
-      }
-    ]
-  },
-  "footer": {
-    "type": "box",
-    "layout": "horizontal",
-    "contents": [
-      {
-        "type": "button",
-        "action": {
-          "type": "uri",
-          "label": "สมัครรับเครดิตฟรี",
-          "uri": "https://lin.ee/4mnpkFX"
-        },
-        "color": "#FE8600FF",
-        "style": "primary"
-      }
-    ]
-  }
-}
-      }])
-      if (result) {
-        liff.closeWindow()
-      } else {
-        const [majorVer, minorVer, patchVer] = (liff.getLineVersion() || "").split('.');
-
-        if (minorVer === undefined) {
-          alert('มีการกดออกจากการแชร์')
-          return
-        }
-
-        if (parseInt(majorVer) >= 10 && parseInt(minorVer) >= 10 && parseInt(patchVer) > 0) {
-          alert('มีการกดออกจากการแชร์')
-        }
-      }
-    }
-
-    function logOut() {
-      liff.logout()
-      window.location.reload()
-    }
-    async function main() {
-      await liff.init({
-        liffId: "1656956317-eGJ2jdV5"
-      })
-      if (!liff.isLoggedIn()) {
-        liff.login()
-      }
-    }
-   main()
-  </script><script src="https://static.line-scdn.net/liff/edge/2/non-ios-extensions.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    // <![CDATA[
-    /* No Right Click */
-    var message = "ไม่อนุญาติให้คลิกขวาค่ะ!!!!";
-
-    function clickIE4() {
-      if (event.button == 2) {
-        alert(message);
-        return false;
-      }
-    }
-
-    function clickNS4(e) {
-      if (document.layers || document.getElementById && !document.all) {
-        if (e.which == 2 || e.which == 3) {
-          alert(message);
-          return false;
-        }
-      }
-    }
-    if (document.layers) {
-      document.captureEvents(Event.MOUSEDOWN);
-      document.onmousedown = clickNS4;
-    } else if (document.all && !document.getElementById) {
-      document.onmousedown = clickIE4;
-    }
-    document.oncontextmenu = new Function("alert(message);return false");
-    /* End No Right Click */
-
-    /* No Highlighting */
-    var omitformtags = ["input", "textarea", "select"];
-    omitformtags = omitformtags.join("|");
-
-    function disableselect(e) {
-      if (omitformtags.indexOf(e.target.tagName.toLowerCase()) == -1)
-        return false
-    }
-
-    function reEnable() {
-      return true
-    }
-    if (typeof document.onselectstart != "undefined") {
-      document.onselectstart = new Function("return false")
-    } else {
-      document.onmousedown = disableselect;
-      document.onmouseup = reEnable;
-    }
-    /* End  No Highlighting */
-    // ]]>
-  </script>
-
-
-
-
-</body></html>
+</body>
+</html>
